feat(extraction): [迭代 251] Java 原生多轮对话模型提炼与去重回写管道落地及双模混合检索深度校准